added sections and styles

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -29,6 +29,17 @@
 	.show-on-desktop {
 		display: none;
 	}
+
+	.cards-container {
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.card {
+		max-width: 200px;
+	}
 }
 
 /* Media query para escritorio (mayores a 1024px y hasta 1439px) */
