--- a/styles/global.css
+++ b/styles/global.css
@@ -68,7 +68,7 @@ a {
 }
 
 nav {
-	background-color: var(--secundary-color);
+	background: linear-gradient(to right, #0074A9, #6D1B7B);
 	color: var(--contrast-color);
 }
 
@@ -85,6 +85,11 @@ nav {
 
 }
 
+.logo-container {
+	padding-top: 12px;
+	display: flex;
+}
+
 .logos {
 	width: 80px;
 	border-radius: 8px;
@@ -92,7 +97,7 @@ nav {
 
 .icon {
 	width: 40px;
-	border-radius: 10px;
+	border-radius: 12px;
 }
 
 .search-container {
@@ -105,7 +110,6 @@ nav {
 	padding: 10px 20px;
 	display: flex;
 	width: 80%;
-	
 	border-radius: 20px;
 }
 
@@ -120,6 +124,8 @@ nav {
 	align-items: center;
 	gap: 12px;
 	padding: 10px 20px;
+	border-radius: 8px;
+	min-height: 60px ;
 }
 
 .warning {
@@ -140,6 +146,12 @@ header {
 	width: 100%;
 }
 
+.header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .header-img {
 	display: flex;
 	width: 100%;
@@ -149,6 +161,134 @@ header {
 	width: 100%;
 }
 
+.header-tittle {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding: 40px 20px;
+	gap: 16px;
+}
+
+.app-store {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	padding: 0 20px;
+	gap: 12px;
+}
+
+.app-store img {
+	width: 40%;
+	border: solid 2px black;
+	border-radius: 8px;
+}
+
+.divisor {
+	background-color: var(--secundary-color);
+	width: 100%;
+	height: 2px;
+}
+
+.categories {
+	background: linear-gradient(to top, #0074A9, #6D1B7B);
+	min-height: 200px;
+	color: var(--contrast-color);
+	padding: 40px 20px;
+}
+
+.news {
+	background: linear-gradient(to bottom, #0074A9, #6D1B7B);
+	min-height: 200px ;
+	color: var(--contrast-color);
+	display: flex;
+	flex-direction: column;
+	padding: 40px 20px;
+	gap: 20px;
+}
+
+.news-container {
+	display: flex;
+	flex-direction: column;
+}
+
+.category-container,
+.cards-container {
+	background-color: rgba(136, 136, 136, 0.5) ;
+	border-radius: 8px;
+}
 
 
+.news-tittle,
+.categories-tittle {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 20px;
+}
+
+.cards-container {
+	display: flex;
+	flex-wrap: nowrap;
+	overflow-x: auto;
+	padding: 20px;
+	gap: 20px;
+}
+
+.card {
+	background-color: var(--contrast-color);
+	border: solid 2px var(--primary-color);
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-width: 150px;
+	color: black;
+}
+
+.card-image {
+	display: flex;
+	width: 100%;
+	padding: 10px;
+}
+
+.card-image img{
+	width: 100%;
+	border: solid 2px black;
+	border-radius: 8px;
+}
+
+.card-text {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	text-align: center;
+	padding-bottom: 12px;
+}
+
+.card-description {
+	gap: 8px;
+}
+
+.category-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	gap: 20px;
+}
+
+.card-category {
+	max-width: 150px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
 
