--- a/styles/global.css
+++ b/styles/global.css
@@ -198,7 +198,78 @@ header {
 	min-height: 200px;
 	color: var(--contrast-color);
 	padding: 40px 20px;
+	width: 100%;
+	padding: 20px;
 }
+
+.categories-container,
+.news-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+}
+
+.category-container {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+
+.card-category {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	gap: 12px;
+	background-color: var(--secundary-color);
+	padding: 20px;
+	border-radius: 12px;
+	max-width: 250px;
+}
+
+.cards-container {
+	display: flex;
+	flex-wrap: nowrap;
+	overflow-x: auto;
+	width: 100%;
+	gap: 20px;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	gap: 20px;
+	min-width: 200px;
+	background-color: rgba(142, 142, 142, 0.513);
+	padding: 20px;
+	border-radius: 8px;
+}
+
+.card-text {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+
+.card-image {
+	display: flex;
+	width: 100%;
+}
+
+.card-image img {
+	width: 100%;
+	border: solid 2px black;
+	border-radius: 8px;
+}
+
+
+
+
 
 .news {
 	background: linear-gradient(to bottom, #0074A9, #6D1B7B);
@@ -208,87 +279,5 @@ header {
 	flex-direction: column;
 	padding: 40px 20px;
 	gap: 20px;
-}
-
-.news-container {
-	display: flex;
-	flex-direction: column;
-}
-
-.category-container,
-.cards-container {
-	background-color: rgba(136, 136, 136, 0.5) ;
-	border-radius: 8px;
-}
-
-
-.news-tittle,
-.categories-tittle {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	padding: 20px;
-}
-
-.cards-container {
-	display: flex;
-	flex-wrap: nowrap;
-	overflow-x: auto;
-	padding: 20px;
-	gap: 20px;
-}
-
-.card {
-	background-color: var(--contrast-color);
-	border: solid 2px var(--primary-color);
-	border-radius: 8px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	min-width: 150px;
-	color: black;
-}
-
-.card-image {
-	display: flex;
-	width: 100%;
-	padding: 10px;
-}
-
-.card-image img{
-	width: 100%;
-	border: solid 2px black;
-	border-radius: 8px;
-}
-
-.card-text {
-	display: flex;
-	flex-direction: column;
-	gap: 12px;
-	text-align: center;
-	padding-bottom: 12px;
-}
-
-.card-description {
-	gap: 8px;
-}
-
-.category-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	padding: 20px;
-	gap: 20px;
-}
-
-.card-category {
-	max-width: 150px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
 }
 
