--- a/styles/global.css
+++ b/styles/global.css
@@ -289,10 +289,44 @@ header {
 	border-radius: 8px;
 }
 
-.blog {
-	background-color: var(--contrast-color);
-	min-height: 50px;
+.forum {
+	background-color: #6D1B7B;
 }
+
+.forum-container {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 100%;
+	min-height: 250px;
+	border-radius: 40px;
+	background-color: var(--contrast-color);
+	padding: 40px 20px;
+	gap: 12px;
+	text-align: center;
+}
+
+.forum-tittle {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+
+.feature {
+	background-color:rgba(255, 153, 0, 0.5);
+	border: solid 2px black;
+	border-radius: 10px;
+	padding: 8px 12px;
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+}
+
+.feature a:hover {
+	cursor: pointer;
+}
+
 
 
 .near-you {
