--- a/styles/global.css
+++ b/styles/global.css
@@ -291,19 +291,19 @@ header {
 
 .forum {
 	background-color: #6D1B7B;
-	padding: 0 20px;
+	padding: 40px 20px;
 }
 
 .forum-container {
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-around;
 	width: 100%;
-	min-height: 250px;
 	border-radius: 40px;
 	background-color: var(--contrast-color);
 	padding: 40px 20px;
-	gap: 12px;
+	gap: 40px;
 	text-align: center;
 }
 
@@ -311,17 +311,21 @@ header {
 	display: flex;
 	justify-content: center;
 	text-align: center;
+	padding: 20px;
+	color: var(--contrast-color);
 }
 
 .feature {
 	background-color:rgba(255, 153, 0, 0.5);
 	border: solid 2px black;
 	border-radius: 10px;
-	padding: 8px 12px;
+	padding: 0 12px;
 	text-align: left;
 	display: flex;
 	flex-direction: column;
-	text-align: left;
+	gap: 8px;
+	max-width: 220px;
+	text-align: center;
 }
 
 .feature a:hover {
