--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -21,6 +21,14 @@
 		justify-content: center;
 	}
 
+	.forum-container {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: space-around;
+	}
+
 }
 
 @media (min-width: 768px) {
