--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -70,6 +70,17 @@
 		padding: 10px 20px;
 	}
 
+	.cards-container {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		overflow-x: none;
+		justify-content: space-around;
+	}
+
+	.card {
+		max-width: 200px;
+	}
 	
 }
 
