--- a/styles/global.css
+++ b/styles/global.css
@@ -68,7 +68,7 @@ a {
 }
 
 nav {
-	background: linear-gradient(to right, #0074A9, #6D1B7B);
+	background: linear-gradient(to bottom, #0074A9, #6D1B7B);
 	color: var(--contrast-color);
 }
 
@@ -318,7 +318,7 @@ header {
 
 
 .forum {
-	background-color: #6D1B7B;
+	background: linear-gradient(to bottom, #0074A9, #6D1B7B, #0074A9);
 	padding: 40px 20px;
 }
 
@@ -329,7 +329,7 @@ header {
 	justify-content: space-around;
 	width: 100%;
 	border-radius: 40px;
-	background-color: var(--contrast-color);
+	background-color: rgb(128, 128, 128, 0.5);
 	padding: 40px 20px;
 	gap: 40px;
 	text-align: center;
@@ -344,16 +344,16 @@ header {
 }
 
 .feature {
-	background-color:rgba(255, 153, 0, 0.5);
+	background-color: var(--contrast-color);
 	border: solid 2px black;
 	border-radius: 10px;
-	padding: 0 12px;
+	padding: 12px 12px;
 	text-align: left;
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
-	max-width: 220px;
 	text-align: center;
+	max-width: 200px;
 }
 
 .feature a:hover {
@@ -390,8 +390,3 @@ header {
 	gap: 20px;
 	width: 100%;
 }
-
-
-
-
-
