--- a/styles/global.css
+++ b/styles/global.css
@@ -82,11 +82,52 @@ nav {
 	align-items: center;
 	justify-content: space-between;
 	padding: 10px 20px;
-
 }
 
+
+label {
+	cursor: pointer;
+}
+
+.menu-hamburguesa {
+	display: flex;
+	align-items: center;
+	flex-direction: row-reverse;
+}
+
+.mobile-menu {
+	display: none;
+	flex-direction: column;
+	background: linear-gradient(to bottom, #0074A9, #6D1B7B);
+	padding: 15px;
+	max-width: 150px;
+	border-radius: 8px;
+	margin-top: 50px;
+}
+
+.mobile-menu ul {
+	list-style: none;
+}
+
+.mobile-menu ul li {
+	padding: 10px 0;
+}
+
+.mobile-menu ul li a {
+	color: #fff;
+	text-decoration: none;
+}
+
+#menu-toggle:checked + label + .mobile-menu {
+	display: flex;
+    position: absolute;
+    left: 0;
+    top: 10px;
+	border: solid 2px #6D1B7B;
+}
+
+
 .logo-container {
-	padding-top: 12px;
 	display: flex;
 	justify-content: space-around;
 	gap: 12px;
@@ -94,7 +135,7 @@ nav {
 
 .logos {
 	width: 40px;
-	border-radius: 8px;
+	border-radius: 18px;
 }
 
 .icon {
