--- a/styles/formulary.css
+++ b/styles/formulary.css
@@ -1,7 +1,18 @@
 
+.register {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 .formulary {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 40px;
+    gap: 20px;
+    color: var(--contrast-color);
     background: linear-gradient(to top, #0074A9, #6D1B7B);
 }
 
@@ -12,7 +23,9 @@
     border-radius: 20px;
     align-items: center;
     text-align: center;
-    padding: 0 20px;
+    padding: 20px;
+    color: var(--contrast-color);
+    gap: 12px;
 
 }
 
@@ -37,7 +50,16 @@
 
 .inputs {
     display: flex;
+    width: 100%;
     padding: 4px;
     border-radius: 4px;
     text-align: center;
+}
+
+.basic-info,
+.address,
+.preferences {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 }
