--- a/styles/formulary.css
+++ b/styles/formulary.css
@@ -26,7 +26,7 @@
     padding: 20px;
     color: var(--contrast-color);
     gap: 12px;
-
+    min-width: 45%;
 }
 
 .division-white {
@@ -50,16 +50,30 @@
 
 .inputs {
     display: flex;
-    width: 100%;
     padding: 4px;
     border-radius: 4px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .basic-info,
 .address,
-.preferences {
+.preferences,
+.image-perfil {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 12px;
+    max-width: 80%;
+}
+
+
+@media (min-width: 768px) {
+    .formulary {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
