--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -30,6 +30,11 @@
 	}
 
 	
+	.formulary {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
 
 @media (min-width: 768px) {
