--- a/styles/global.css
+++ b/styles/global.css
@@ -167,7 +167,7 @@ label {
 	flex-direction: row;
     justify-content: center;
 	align-items: center;
-    min-width: 150px;
+	width: 100%;
     padding: 10px 20px;
     background-color: #00c48c;
     color: #fff;
@@ -360,16 +360,34 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+    font-size: 14px;
+    border: none;
+    border-radius: 20px; 
 	width: 100%;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.view-button:hover {
+    background-color: #00b3a8; 
+    transform: scale(1.05); 
+}
+
+.view-button a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .button-view {
 	display: flex;
-	flex: 1;
 	align-items: center;
 	justify-content: center;
 	padding: 20px;
+	width: 100%;
 	border-radius: 10px;
+	background-color: var(--contrast-color); 
+	color: #6D1B7B;
 }
 
 
